--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "types": "git://github.com/leon740727/types.git#semver:~0.3.2"
   }
 }
